11617 esc fails with /usr/bin/cpp present Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Dan McDonald <danmcd@joyent.com>